--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,11 +12,12 @@ jobs:
     - uses: actions/checkout@v3
     
     - name: Deploy via SFTP
-      uses: SamKirkland/FTP-Deploy-Action@4.3.3
+      uses: wlixcc/SFTP-Deploy-Action@v1.2.4
       with:
         server: sftp.weedcontrolkent.co.uk
         username: csh3368367
         password: ${{ secrets.SFTP_PASSWORD }}
-        protocol: sftp
         port: 22
-        server-dir: /public_html/
+        local_path: './*'
+        remote_path: '/public_html/'
+        sftp_only: true
