--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,5 +19,5 @@ jobs:
         password: ${{ secrets.SFTP_PASSWORD }}
         port: 22
         local_path: './*'
-        remote_path: '/public_html/'
+        remote_path: './public_html/'
         sftp_only: true
