--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,13 +7,12 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    
-    steps:
-      # Step 1: Checkout the repository
-      - uses: actions/checkout@v3
 
-      # Step 2: Deploy via SFTP
-      - name: Deploy via SFTP
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Deploy via SFTP (auto-create directory)
         uses: wlixcc/SFTP-Deploy-Action@v1.2.4
         with:
           server: sftp.weedcontrolkent.co.uk
@@ -21,5 +20,5 @@ jobs:
           password: ${{ secrets.SFTP_PASSWORD }}
           port: 22
           local_path: './*'
-          remote_path: '/home/csh3368367/public_html/'   # <- Folder you can write to
-          sftp_only: true
+          remote_path: '/home/csh3368367/public_html/'
+          sftp_only: false
