--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,13 +12,13 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Deploy via SFTP (auto-create directory)
+      - name: Deploy website via SFTP
         uses: wlixcc/SFTP-Deploy-Action@v1.2.4
         with:
-          server: sftp.weedcontrolkent.co.uk
-          username: csh3368367
+          server: ftp.fasthosts.co.uk
+          username: weedcontrolkent.co.uk
           password: ${{ secrets.SFTP_PASSWORD }}
           port: 22
           local_path: './*'
-          remote_path: '/home/csh3368367/public_html/'
+          remote_path: 'HTDOCS'
           sftp_only: false
